Fix VoteDetail API
