# internal/api/proposal/vote.go
@@ -80,9 +80,9 @@ func RevokeVote(ctx *gin.Context) {
 //
 //	@summary	revoke vote on existing metaforo vote
 //	@tags		Proposal
-//	@param		vote_id	path		number											true	"Vote ID"
-//	@param		page	query		number											false	"page of the vote list"
-//	@success	200		{object}	api.Reply{data=metaforo.UserPollRecordResponse}	"Success"
+//	@param		vote_id	path		number												true	"Vote ID"
+//	@param		page	query		number												false	"page of the vote list"
+//	@success	200		{object}	api.Reply{data=[]metaforo.UserPollRecordResponse}	"Success"
 //	@router		/proposals/vote_detail/:vote_id [get]
 func ShowVoteDetail(ctx *gin.Context) {
 	voteIdStr := ctx.Param("vote_id")
